codex-rs/tui/src/snapshots/codex_tui__status_indicator_widget__tests__renders_wrapped_details_panama_two_lines.snap
---
source: tui/src/status_indicator_widget.rs
expression: terminal.backend()
---
"• 工作中 (0秒)               "
"  └ A man a plan a canal      "
"    panama                    "
